# sd-tagtool

./: README-CN.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: tauri-action-publish.yml  tauri-action-test.yml
src/: App.vue  main.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/shared/tags.db/: quality.csv
src-tauri/src/: main.rs  tagutils.rs  translate.rs
src/components/: DeleteIsolatedTxt.ts  DeleteIsolatedTxt.vue  Home.vue  ImageFilter.vue  ImageList.vue  MenuBar.vue  Settings.vue  Tag.vue  TagEditor.vue  TagInput.vue  TagList.vue
src/lib/: history.ts  state.ts  types.ts  utils.ts
