[package]
name = "sd-tagtool"
version = "1.2.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "process-exit", "window-close", "window-set-title", "os-all", "protocol-asset", "path-all", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11" }
tokio = { version = "1.28.2", features = ["full"] }
regex = "1.8.4"
lazy_static = "1.4.0"
futures = "0.3.28"
csv = "1.2.2"
simsearch = "0.2.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
